--- a/src/components/projects/_projects.module.scss
+++ b/src/components/projects/_projects.module.scss
@@ -6,6 +6,7 @@
   align-items: center;
   background-color: s.$GreyColor;
   width: 100%;
+  min-width: 320px;
   height: 800px;
   border-bottom: 1px solid s.$PurpleColor;
   div {
@@ -19,6 +20,7 @@
   align-items: center;
   width: 100%;
   height: 100px;
+  margin-top: 10px;
   // background-color: greenyellow;
 }
 
@@ -33,8 +35,8 @@
 }
 
 .project-overlay {
-  height: 200px;
-  width: 320px;
+  height: 225px;
+  width: 350px;
   z-index: 2;
 }
 
@@ -43,16 +45,16 @@
   justify-content: center;
   max-width: 500px;
   max-height: 500px;
-  height: 200px;
-  width: 320px;
+  height: 225px;
+  width: 350px;
   z-index: 3;
 
   .project-info {
     display: flex;
     flex-direction: column;
     justify-content: flex-end;
-    height: 200px;
-    width: 100%;
+    height: 225px;
+    width: 350px;
     background: rgba(0, 0, 0, 0.4);
     z-index: 4;
     max-width: 320px;
@@ -84,17 +86,18 @@
 }
 
 .test {
-  width: 100%;
-  width: 320px;
+  height: 225px;
+  width: 350px;
   text-decoration: none;
 }
 
 .project-img {
   position: absolute;
   z-index: 2;
-  width: 100%;
+  height: 225px;
+  width: 350px;
   max-width: 320px;
-  height: 200px;
+  max-height: 500px;
   object-fit: cover;
   opacity: 0.6;
 }
@@ -109,7 +112,7 @@
 .project-clickme {
   position: absolute;
   margin-left: 0px;
-  margin-top: 80px;
+  margin-top: 95px;
   opacity: 1;
   z-index: 4;
 }
