--- a/src/components/contact/_contact.module.scss
+++ b/src/components/contact/_contact.module.scss
@@ -3,12 +3,11 @@
 .contact-section {
   background-color: s.$GreyColor;
   width: 100%;
-  min-width: 320px;
-  height: 800px;
+  padding: 150px 0;
   border-bottom: 1px solid s.$PurpleColor;
 
   .contact {
-    max-width: 1400px;
+    max-width: 1440px;
     width: 100%;
     height: 100%;
     display: flex;
@@ -24,6 +23,8 @@
   align-items: center;
   justify-content: center;
   width: 80%;
+  max-width: 750px;
+  // background-color: red;
 
   textarea,
   input {
@@ -43,11 +44,13 @@
   textarea {
     width: 100%;
     margin-top: 10px;
+    font-family: s.$PrimaryFont;
+    padding: 10px;
   }
 }
 
-@media (min-width: 425px) {
-  .contact-section {
-    height: 1000px;
-  }
-}
+// @media (min-width: 425px) {
+//   .contact-section {
+//     height: 1000px;
+//   }
+// }
