--- a/src/components/header/navbar/_navbar.module.scss
+++ b/src/components/header/navbar/_navbar.module.scss
@@ -28,6 +28,7 @@
   max-width: 1440px;
   width: 100%;
   background-color: s.$PurpleColor;
+  position: fixed;
   top: 0;
   left: 0;
   z-index: 10;
