--- a/src/components/header/_header.module.scss
+++ b/src/components/header/_header.module.scss
@@ -1,6 +1,9 @@
 @use "../../variables" as s;
 
 .header-section {
+  display: flex;
+  justify-content: center;
+  height: 80px;
   background: s.$PurpleColor;
 
   div {
