--- a/src/components/about/_about.module.scss
+++ b/src/components/about/_about.module.scss
@@ -6,6 +6,7 @@
   width: 100%;
   padding: 150px 0;
   border-bottom: 1px solid s.$PurpleColor;
+  scroll-margin-top: 80px;
   // min-width: 320px;
 
   .about {
