--- a/src/components/contact/_contact.module.scss
+++ b/src/components/contact/_contact.module.scss
@@ -5,6 +5,7 @@
   width: 100%;
   padding: 150px 0;
   border-bottom: 1px solid s.$PurpleColor;
+  scroll-margin-top: 80px;
 
   .contact {
     max-width: 1440px;
